changed settings icon for refresh icon

--- a/app/src/main/res/layout/activity_current_game.xml
+++ b/app/src/main/res/layout/activity_current_game.xml
@@ -25,10 +25,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/current_game_iv_settings"
+            android:id="@+id/current_game_iv_refresh"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_settings"
+            android:src="@drawable/ic_refresh"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
