--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Set 1"
-        android:textColor="@color/black"
+        android:textColor="@color/default_text"
         app:layout_constraintBottom_toBottomOf="@+id/RG_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/RG_1" />
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Set 2"
-        android:textColor="@color/black"
+        android:textColor="@color/default_text"
         app:layout_constraintBottom_toBottomOf="@+id/RG_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/RG_2"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Set 3"
-        android:textColor="@color/black"
+        android:textColor="@color/default_text"
         app:layout_constraintBottom_toBottomOf="@+id/RG_3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/RG_3"
@@ -57,10 +57,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         android:text="Score invullen voor wedstrijd  #1111"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/default_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_logo" />
@@ -81,7 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="Sem tegen Daan op Zaal1"
-        android:textColor="@color/black"
+        android:gravity="center"
+        android:textColor="@color/default_text"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -185,7 +187,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/radio_left_selector"
+            android:background="@drawable/radio_single"
             android:button="@null"
             android:checked="true"
             android:paddingHorizontal="20dp"
