--- a/app/src/main/res/drawable/radio_left_switched_true.xml
+++ b/app/src/main/res/drawable/radio_left_switched_true.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners android:topLeftRadius="10dp" android:bottomLeftRadius="10dp"/>
     <solid android:color="@android:color/white"/>
-    <stroke android:color="#eeeeef" android:width="3dp"/>
+    <stroke android:color="@color/custom_radio_grey" android:width="3dp"/>
 </shape>
