--- a/app/src/main/res/drawable/radio_right_switched_false.xml
+++ b/app/src/main/res/drawable/radio_right_switched_false.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:topRightRadius="10dp" android:bottomRightRadius="10dp"/>
-    <solid android:color="#eeeeef"/>
+    <solid android:color="@color/custom_radio_grey"/>
 </shape>
