--- a/app/src/main/res/drawable/radio_single.xml
+++ b/app/src/main/res/drawable/radio_single.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:topRightRadius="10dp" android:bottomRightRadius="10dp"/>
+    <corners android:radius="10dp"/>
     <solid android:color="@android:color/white"/>
-    <stroke android:color="@color/custom_radio_grey" android:width="2dp"/>
+    <stroke android:color="@color/custom_radio_grey" android:width="3dp"/>
 </shape>
