--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,8 +11,7 @@
     <color name="BRESS_orange">#FF7D00</color>
     <color name="BRESS_gray">#707070</color>
     <color name="BRESS_orange_transparent">#80FF7D00</color>
-    <color name="score_btn">#000000</color>
-    <color name="default_text">#000000</color>
-    <color name="reversed_text">#FFFFFFFF</color>
-    <color name="custom_radio_grey">#c7c7c7</color>
+    <color name="score_btn">#FFFFFFFF</color>
+    <color name="default_text">#FFFFFFFF</color>
+    <color name="reversed_text">#000000</color>
 </resources>
