--- a/app/src/main/res/layout/activity_current_game.xml
+++ b/app/src/main/res/layout/activity_current_game.xml
@@ -28,7 +28,7 @@
             android:id="@+id/current_game_iv_refresh"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_refresh"
+            android:src="@drawable/ic_user"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
