--- a/app/src/main/res/layout/layout_account_dialog.xml
+++ b/app/src/main/res/layout/layout_account_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="40dp">
@@ -24,25 +25,40 @@
         app:srcCompat="@drawable/logo_bress_orange" />
 
     <TextView
-        android:id="@+id/editPlayer_name_label"
+        android:id="@+id/editPlayer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Naam"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Werk speler informatie bij"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView" />
 
+    <TextView
+        android:id="@+id/editPlayer_firstName_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Voornaam"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editPlayer_title" />
+
     <EditText
-        android:id="@+id/editPlayer_name_input"
+        android:id="@+id/editPlayer_firstName_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
-        android:hint="Naam"
+        android:hint="Voornaam"
+        android:gravity="center"
         android:inputType="textEmailAddress"
         android:padding="5dp"
         android:textColor="@color/black"
@@ -50,7 +66,34 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editPlayer_name_label" />
+        app:layout_constraintTop_toBottomOf="@id/editPlayer_firstName_label" />
+
+    <TextView
+        android:id="@+id/editPlayer_lastName_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Achternaam"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editPlayer_firstName_input" />
+
+    <EditText
+        android:id="@+id/editPlayer_lastName_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
+        android:hint="Achternaam"
+        android:gravity="center"
+        android:inputType="textEmailAddress"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@id/editPlayer_lastName_label"/>
 
     <LinearLayout
         android:id="@+id/spinner_layout"
@@ -59,7 +102,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editPlayer_name_input">
+        app:layout_constraintTop_toBottomOf="@id/editPlayer_lastName_input">
 
         <TextView
             android:id="@+id/edit_spinner_label"
