--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,6 +25,62 @@
             app:srcCompat="@drawable/logo_bress_orange" />
 
         <TextView
+            android:id="@+id/register_email_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="ongeldige e-mail adres"
+            android:textColor="@color/red"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/register_email_input"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/register_email_label" />
+
+        <TextView
+            android:id="@+id/register_password_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="min 8 lang en minstens 1 getal"
+            android:textColor="@color/red"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/register_password_input"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/register_password_label"/>
+
+        <TextView
+            android:id="@+id/register_confirm_password_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="wachtwoord komt niet overeen"
+            android:textColor="@color/red"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/register_confirm_password_input"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/register_confirm_password_label"/>
+
+        <TextView
+            android:id="@+id/register_duplicate_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Email bestaat al"
+            android:textColor="@color/red"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/register_bn_confirm"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/register_confirm_password_input"/>
+
+        <TextView
             android:id="@+id/register_email_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,7 +99,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/white"
             android:backgroundTint="@color/white"
-            android:hint="Email"
+            android:hint="Voorbeeld@email.nl"
             android:inputType="textEmailAddress"
             android:padding="5dp"
             android:textColor="@color/black"
@@ -51,7 +107,7 @@
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/register_email_label" />
+            app:layout_constraintTop_toBottomOf="@id/register_email_error" />
 
         <TextView
             android:id="@+id/register_password_label"
@@ -80,7 +136,7 @@
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/register_password_label" />
+            app:layout_constraintTop_toBottomOf="@id/register_password_error" />
 
         <TextView
             android:id="@+id/register_confirm_password_label"
@@ -93,6 +149,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/register_password_input" />
+
 
         <EditText
             android:id="@+id/register_confirm_password_input"
@@ -109,7 +166,7 @@
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/register_confirm_password_label" />
+            app:layout_constraintTop_toBottomOf="@id/register_confirm_password_error" />
 
         <Button
             android:id="@+id/register_bn_confirm"
@@ -123,7 +180,7 @@
             android:enabled="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_input" />
+            app:layout_constraintTop_toBottomOf="@+id/register_duplicate_error" />
 
         <TextView
             android:id="@+id/register_link"
@@ -140,11 +197,5 @@
             app:layout_constraintTop_toBottomOf="@id/register_bn_confirm" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
