Added border to edit account input fields

--- a/app/src/main/res/layout/layout_account_dialog.xml
+++ b/app/src/main/res/layout/layout_account_dialog.xml
@@ -55,8 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@color/white"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/edit_border"
         android:hint="Voornaam"
         android:gravity="center"
         android:inputType="textEmailAddress"
@@ -85,8 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@color/white"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/edit_border"
         android:hint="Achternaam"
         android:gravity="center"
         android:inputType="textEmailAddress"
