--- a/app/src/main/res/layout/activity_current_game.xml
+++ b/app/src/main/res/layout/activity_current_game.xml
@@ -10,11 +10,11 @@
         android:id="@+id/current_game_cl_menubar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/BRESS_gray"
+        android:paddingHorizontal="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/BRESS_gray"
-        android:paddingHorizontal="30dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/current_game_iv_logo"
@@ -35,8 +35,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/current_game_srl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,56 +47,56 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/current_game_cl_body"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="20dp"
                     android:visibility="gone"
-                    android:layout_marginHorizontal="30dp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/current_game_cl_game"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:layout_constraintTop_toTopOf="@id/current_game_cl_body"
-                        android:background="@drawable/border">
+                        android:background="@drawable/border"
+                        app:layout_constraintTop_toTopOf="@id/current_game_cl_body">
 
                         <TextView
                             android:id="@+id/current_game_tv_game_header"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/BRESS_gray"
+                            android:padding="5dp"
                             android:text="Je huidige wedstrijd"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="20dp"
-                            android:padding="5dp"
-                            app:layout_constraintTop_toTopOf="@id/current_game_cl_game"/>
+                            app:layout_constraintTop_toTopOf="@id/current_game_cl_game" />
 
                         <TextView
                             android:id="@+id/current_game_tv_game_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/BRESS_orange"
+                            android:padding="5dp"
                             android:text="Wedstrijd #1209"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="20dp"
-                            android:padding="5dp"
-                            app:layout_constraintTop_toBottomOf="@id/current_game_tv_game_header"/>
+                            app:layout_constraintTop_toBottomOf="@id/current_game_tv_game_header" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            app:layout_constraintTop_toBottomOf="@+id/current_game_tv_game_title"
-                            android:padding="20dp">
+                            android:padding="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/current_game_tv_game_title">
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -108,19 +107,19 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Speler 1"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Speler 2"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Locatie"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -134,21 +133,21 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Naam1"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
 
                                 <TextView
                                     android:id="@+id/current_game_tv_player2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Naam2"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
 
                                 <TextView
                                     android:id="@+id/current_game_tv_field"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="zaal"
-                                    android:textColor="@color/default_text"/>
+                                    android:textColor="@color/default_text" />
                             </LinearLayout>
                         </LinearLayout>
 
@@ -157,9 +156,9 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/current_game_cl_game"
                         android:background="@drawable/border"
-                        android:paddingBottom="10dp">
+                        android:paddingBottom="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/current_game_cl_game">
 
                         <TextView
                             android:id="@+id/current_game_tv_game_score"
@@ -179,10 +178,10 @@
                             android:id="@+id/current_game_bn_score"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginVertical="10dp"
                             android:backgroundTint="@color/score_btn"
                             android:text="Vul score in"
                             android:textColor="@color/reversed_text"
-                            android:layout_marginVertical="10dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/current_game_tv_game_score" />
@@ -196,34 +195,34 @@
                     android:id="@+id/current_game_cl_nogame"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="20dp"
                     android:visibility="visible"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginHorizontal="30dp">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/current_game_tv_nogame_header"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/BRESS_gray"
+                        android:padding="5dp"
                         android:text="Je huidige wedstrijd"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toTopOf="@id/current_game_cl_nogame"/>
+                        app:layout_constraintTop_toTopOf="@id/current_game_cl_nogame" />
 
                     <TextView
                         android:id="@+id/current_game_tv_nogame_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/BRESS_orange"
+                        android:padding="5dp"
                         android:text="Je hebt op dit moment geen wedstrijd. \n\nJe krijgt een melding als jouw volgende wedstrijd begint."
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toBottomOf="@id/current_game_tv_nogame_header"/>
+                        app:layout_constraintTop_toBottomOf="@id/current_game_tv_nogame_header" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -231,48 +230,48 @@
                     android:id="@+id/next_game_cl_body"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
                     android:layout_marginTop="20dp"
                     android:visibility="gone"
-                    android:layout_marginHorizontal="30dp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/next_game_cl_game"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:layout_constraintTop_toTopOf="@id/next_game_cl_body"
-                        android:background="@drawable/border">
+                        android:background="@drawable/border"
+                        app:layout_constraintTop_toTopOf="@id/next_game_cl_body">
 
                         <TextView
                             android:id="@+id/next_game_tv_game_header"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/BRESS_gray"
+                            android:padding="5dp"
                             android:text="Je volgende wedstrijd"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="20dp"
-                            android:padding="5dp"
-                            app:layout_constraintTop_toTopOf="@id/next_game_cl_game"/>
+                            app:layout_constraintTop_toTopOf="@id/next_game_cl_game" />
 
                         <TextView
                             android:id="@+id/next_game_tv_game_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/BRESS_orange"
+                            android:padding="5dp"
                             android:text="Wedstrijd #1209"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="20dp"
-                            android:padding="5dp"
-                            app:layout_constraintTop_toBottomOf="@id/next_game_tv_game_header"/>
+                            app:layout_constraintTop_toBottomOf="@id/next_game_tv_game_header" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            app:layout_constraintTop_toBottomOf="@+id/next_game_tv_game_title"
-                            android:padding="20dp">
+                            android:padding="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/next_game_tv_game_title">
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -337,10 +336,10 @@
         android:id="@+id/current_game_bn_logout"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@color/BRESS_orange"
         android:text="Uitloggen"
         android:textColor="@color/white"
-        android:backgroundTint="@color/BRESS_orange"
-        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
